ch3/my-ngx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ngx-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ngx-dep
