ch3/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-ngx-ing
spec:
  ingressClassName: ngx-ink
  rules:
    - host: nginx.test
      http:
        paths:
          - backend:
              service:
                name: my-ngx-svc
                port:
                  number: 80
            path: /
            pathType: Exact
---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ngx-ink

spec:
  controller: nginx.org/ingress-controller
